--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Bootstrap-Admin-Template",
+  "name": "Azzip-admin",
   "version": "2.1.2",
   "author": {
-    "name": "Azzip-admin",
+    "name": "×¶¶È",
     "email": "reseason@gmail.com",
     "url": "https://github.com/admin-ui"
   },
-  "description": "Twitter Bootstrap Admin Template",
+  "description": "Azzip-admin",
   "license": "MIT",
   "repository": {
     "type": "git",
