--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Azzip-admin",
   "version": "2.1.2",
   "author": {
-    "name": "×¶¶È",
+    "name": "é”¥åº¦",
     "email": "reseason@gmail.com",
     "url": "https://github.com/admin-ui"
   },
